Task 1 completed: Configure PostgreSQL with Helm and create planned events table with sample data
- Fixed Helm chart values in `values.yaml` to correctly configure PostgreSQL deployment.
- Updated `deployment.yaml` and `configmap.yaml` to resolve issues with PostgreSQL initialization and connections.
- Created PostgreSQL table `planned_events_tab` with columns: id (GUID), voyage_id (INT), vessel_id (INT), from_date (DATETIME), and to_date (DATETIME).
- Inserted sample data into `planned_events_tab` to test the functionality.
- Verified successful data insertion using `SELECT` query.
- Confirmed the PostgreSQL instance was correctly deployed and the table was accessible.
- Updated README
- - Removed `docker-compose.yml` and `init.sql` as database setup is now handled via Helm and Kubernetes.

--- a/charts/postgresql/templates/configmap.yaml
+++ b/charts/postgresql/templates/configmap.yaml
@@ -4,4 +4,5 @@ metadata:
     name: '{{ include "postgresql.fullname" . }}-init-sql'
 data:
   init.sql: |
-    {{ .Values.primary.initdb.scripts.init.sql | nindent 4 }}
+    {{ index .Values.primary.initdb.scripts "init.sql" | nindent 4 }}
+
