--- a/charts/postgresql/templates/deployment.yaml
+++ b/charts/postgresql/templates/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: postgresql
-          image: "postgres:{{ .Chart.appVersion }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           env:
             - name: POSTGRES_USER
               value: {{ .Values.auth.username | quote }}
