--- a/charts/postgresql/values.yaml
+++ b/charts/postgresql/values.yaml
@@ -3,28 +3,31 @@ auth:
   password: kdpass
   database: kdcruise
 
+image:
+  repository: postgres
+  tag: "17"
+
 primary:
   initdb:
     scripts:
       init.sql: |-
-        CREATE EXTENSION IF NOT EXISTS "uuid-ossp";
         CREATE TABLE IF NOT EXISTS planned_events_tab (
-        id UUID PRIMARY KEY DEFAULT uuid_generate_v4(),
+        id UUID PRIMARY KEY,
         voyage_id INT NOT NULL,
         vessel_id INT NOT NULL,
         from_date TIMESTAMP NOT NULL,
         to_date TIMESTAMP NOT NULL,
         event TEXT NOT NULL
         );
-        INSERT INTO planned_events_tab (voyage_id, vessel_id, from_date, to_date, event)
+        INSERT INTO planned_events_tab (id, voyage_id, vessel_id, from_date, to_date, event)
         VALUES
-            (123, 332, '2025-03-18 17:00:00', '2025-03-18 19:00:00', 'Dance at pool'),
-            (123, 332, '2025-03-19 10:00:00', '2025-03-19 12:00:00', 'Morning Yoga'),
-            (123, 332, '2025-03-19 14:00:00', '2025-03-19 16:00:00', 'Lunch Buffet'),
-            (123, 332, '2025-03-19 18:00:00', '2025-03-19 20:00:00', 'Evening Concert'),
-            (123, 332, '2025-03-20 08:00:00', '2025-03-20 10:00:00', 'Breakfast at Deck'),
-            (123, 332, '2025-03-20 15:00:00', '2025-03-20 17:00:00', 'Afternoon Tea'),
-            (123, 332, '2025-03-20 18:00:00', '2025-03-20 20:00:00', 'Sunset Cruise'),
-            (123, 332, '2025-03-21 07:00:00', '2025-03-21 09:00:00', 'Early Bird Yoga'),
-            (123, 332, '2025-03-21 19:00:00', '2025-03-21 21:00:00', 'Captain''s Dinner'),
-            (123, 332, '2025-03-22 10:00:00', '2025-03-22 12:00:00', 'Island Excursion');
+            ('7e1a1b2c-3d4e-5f60-8a7b-9c0d1e2f3a4b',123, 332, '2025-03-18 17:00:00', '2025-03-18 19:00:00', 'Dance at pool'),
+            ('1f2e3d4c-5b6a-7c8d-9e0f-1a2b3c4d5e6f',123, 332, '2025-03-19 10:00:00', '2025-03-19 12:00:00', 'Morning Yoga'),
+            ('2a3b4c5d-6e7f-8a9b-0c1d-2e3f4a5b6c7d',123, 332, '2025-03-19 14:00:00', '2025-03-19 16:00:00', 'Lunch Buffet'),
+            ('3c4d5e6f-7a8b-9c0d-1e2f-3a4b5c6d7e8f',123, 332, '2025-03-19 18:00:00', '2025-03-19 20:00:00', 'Evening Concert'),
+            ('4e5f6a7b-8c9d-0e1f-2a3b-4c5d6e7f8a9b',123, 332, '2025-03-20 08:00:00', '2025-03-20 10:00:00', 'Breakfast at Deck'),
+            ('5a6b7c8d-9e0f-1a2b-3c4d-5e6f7a8b9c0d',123, 332, '2025-03-20 15:00:00', '2025-03-20 17:00:00', 'Afternoon Tea'),
+            ('6c7d8e9f-0a1b-2c3d-4e5f-6a7b8c9d0e1f',123, 332, '2025-03-20 18:00:00', '2025-03-20 20:00:00', 'Sunset Cruise'),
+            ('7e8f9a0b-1c2d-3e4f-5a6b-7c8d9e0f1a2b',123, 332, '2025-03-21 07:00:00', '2025-03-21 09:00:00', 'Early Bird Yoga'),
+            ('8a9b0c1d-2e3f-4a5b-6c7d-8e9f0a1b2c3d',123, 332, '2025-03-21 19:00:00', '2025-03-21 21:00:00', 'Captains Dinner'),
+            ('9c0d1e2f-3a4b-5c6d-7e8f-9a0b1c2d3e4f',123, 332, '2025-03-22 10:00:00', '2025-03-22 12:00:00', 'Island Excursion');
