--- a/src/KD.Cruise.PlannedEventsApi/appsettings.json
+++ b/src/KD.Cruise.PlannedEventsApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Postgres": "Host=db;Port=5432;Database=kdcruise;Username=kdadmin;Password=kdpass"
+  }
 }
