git commit -m "feat: working integration between API and PostgreSQL pods in Minikube
- API pod successfully connects to PostgreSQL pod
- Verified data fetch from API to database in Minikube environment
- Pre-reqs for task 3 & 4 in place
- Started adding Prometheus
- Parent Chart  to deploy the KD Cruise Ship App stack
- Updated README

--- a/src/KD.Cruise.PlannedEventsApi/appsettings.json
+++ b/src/KD.Cruise.PlannedEventsApi/appsettings.json
@@ -1,12 +1,12 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Postgres": "Host=db;Port=5432;Database=kdcruise;Username=kdadmin;Password=kdpass"
+    "Default": "Host=localhost;Port=5432;Database=kdcruise;Username=kdadmin;Password=kdpass"
   }
 }
