--- a/.github/workflows/docker-push.yaml
+++ b/.github/workflows/docker-push.yaml
@@ -2,22 +2,40 @@ name: Build and Push Docker Image
 
 on:
   push:
-    branches: 
-    - main
+    branches:
+      - main
     paths:
       - 'src/KD.Cruise.PlannedEventsApi/**'
-      - 'charts/planned-events-api/**'
+      - 'charts/**'
+      - 'monitoring/**'
       - '.github/workflows/docker-push.yaml'
 
 jobs:
   build-and-push:
+    name: Build & Push API Image
     runs-on: ubuntu-latest
+
+    outputs:
+      image_tag: ${{ steps.meta.outputs.image_tag }}
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: docker/setup-buildx-action@v3
-      - name: Build and push
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+      - name: Set image tag
+        id: meta
+        run: echo "image_tag=sha-${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
+
+      - name: Build and push Docker image
         run: |
-          IMAGE_TAG=sha-${GITHUB_SHA::7}
-          docker build -t ghcr.io/oyechr/planned-events-api:$IMAGE_TAG .
-          echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-          docker push ghcr.io/oyechr/planned-events-api:$IMAGE_TAG
+          docker build -t ghcr.io/oyechr/planned-events-api:${{ steps.meta.outputs.image_tag }} \
+                       -t ghcr.io/oyechr/planned-events-api:latest \
+                       -f src/KD.Cruise.PlannedEventsApi/Dockerfile src
+          docker push ghcr.io/oyechr/planned-events-api:${{ steps.meta.outputs.image_tag }}
+          docker push ghcr.io/oyechr/planned-events-api:latest
