--- a/charts/kd-cruise/Chart.yaml
+++ b/charts/kd-cruise/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: kd-cruise
-description: Parent chart to deploy the KD Cruise Ship App stack (API, PostgreSQL, Prometheus)
+description: Parent chart to deploy the KD Cruise Ship App stack (API, PostgreSQL)
 type: application
 version: 0.1.0
 appVersion: "0.1.0"
@@ -11,6 +11,4 @@ dependencies:
   - name: planned-events-api
     version: "0.1.0" 
     repository: "file://../planned-events-api"
-  - name: kube-prometheus-stack
-    version: "75.9.0" 
-    repository: "https://prometheus-community.github.io/helm-charts"
+  
