--- a/charts/planned-events-api/templates/service.yaml
+++ b/charts/planned-events-api/templates/service.yaml
@@ -2,6 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "planned-events-api.fullname" . }}
+  labels:
+    app.kubernetes.io/name: {{ include "planned-events-api.name" . }}
+    release: prometheus  
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/path: /metrics
+    prometheus.io/port: "80"
 spec:
   type: {{ .Values.service.type }}
   ports:
