--- a/charts/postgresql/templates/service.yaml
+++ b/charts/postgresql/templates/service.yaml
@@ -2,12 +2,20 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "postgresql.fullname" . }}
+  labels:
+    app: {{ include "postgresql.name" . }}
+    release: prometheus  
+    prometheus: scrape   
 spec:
   type: ClusterIP
-  ports:
-    - port: 5432
-      targetPort: 5432
-      protocol: TCP
-      name: postgresql
   selector:
     app: {{ include "postgresql.name" . }}
+  ports:
+    - name: postgresql
+      port: 5432
+      targetPort: 5432
+      protocol: TCP
+    - name: metrics
+      port: 9187
+      targetPort: 9187
+      protocol: TCP
