--- a/.github/workflows/docker-push.yaml
+++ b/.github/workflows/docker-push.yaml
@@ -9,6 +9,9 @@ on:
       - 'charts/**'
       - 'monitoring/**'
       - '.github/workflows/docker-push.yaml'
+permissions:
+  packages: write  
+  contents: read 
 
 jobs:
   build-and-push:
