feat: verify local development of umbrella chart, ensure API-DB connectivity, update README and .gitignore
- Verified makefile deploys successfully to Minikube and that the API connects to the PostgreSQL database.
- Updated README with tested local development and verification steps.
- Updated .gitignore to exclude Helm chart archives and dependency directories.
- Removed some unsused files

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,10 @@ docker-compose.override.yml
 .dockerignore
 **/.env
 
+# Helm chart archives and dependencies
+*.tgz
+charts/*/charts/
+
 # Kubernetes
 *.yaml~
 *.yml~
