feat: Automate Prometheus and Grafana Setup & Dashboard Integration
- **Validated Prometheus & Grafana Setup**: After manually port-forwarding to Grafana and Prometheus, confirmed that both services are running correctly.
- **Updated Makefile**: Automated the port-forwarding and Grafana dashboard import steps to simplify the setup process. The updated Makefile includes:
  - Port-forwarding Prometheus and Grafana services.
  - Importing the Grafana dashboard using a provided JSON file.

- **Dashboard Template Created**: A new Grafana dashboard template was created and added to the project. The template includes metrics for both PostgreSQL and the API.
- PostgreSQL dashboard is working as expected

- **Issue with API Dashboard**:
 - Verified that metrics endpoint is accessible and returning data.
  - No errors found in the API pod logs.
  - Issue likely related to incorrect DNS resolution or service discovery within Prometheus configuration.
  - Verified that the API service is correctly exposed with valid endpoints.

--- a/charts/planned-events-api/templates/service.yaml
+++ b/charts/planned-events-api/templates/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: {{ include "planned-events-api.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "planned-events-api.name" . }}
+    app: {{ include "planned-events-api.name" . }}
     release: prometheus  
   annotations:
     prometheus.io/scrape: "true"
